[package]
name = "persist_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-raft = { version = "0.6", path = "../async-raft" }
persiststore = { version = "0.1.0", path = "../persiststore" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.57"
actix-web = "4"
reqwest = { version = "0.11.11", features = ["json"] }
async-trait = "0.1.56"
derive-getters = "0.2.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.10"
maplit = "1.0.2"
futures = "0.3"

tracing-opentelemetry = "0.7.0"
opentelemetry = "0.8.0"
opentelemetry-jaeger = "0.7.0"
color-eyre = { version = "0.5", default-features = false }

[[bin]]
name = "data-client"
path = "src/bin/insert.rs"
